--- a/src/components/Authentication/authentication.scss
+++ b/src/components/Authentication/authentication.scss
@@ -4,17 +4,17 @@
   height: 100vh;
   width: 100vw;
   position: fixed;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
   .modal-container{
     padding: 2rem 1rem;
-    top: 10%;
+    //top: 5%;
     position: absolute;
-    //height: 100px;
     max-width: 500px;
     width: 100%;
     background-color: $white-color;
@@ -58,7 +58,7 @@
 
       border-bottom: 1px solid rgb(209, 209, 213);
     }
-    .login-tab-container{
+    .tab-container{
       padding: 1rem 2rem;
       width: 100%;
       display: flex;
@@ -111,6 +111,60 @@
         font-weight: 600;
         font-size: 16px;
         line-height: 22px;
+      }
+
+      .checkbox-container{
+        margin-bottom: 2rem;
+        input[type='checkbox']{
+          padding: 0;
+          width: 20px;
+          height: 20px;
+        }
+
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        label{
+          font-size: 16px;
+        }
+
+
+      }
+
+
+      .landlord-info{
+        .landlord-title{
+          font-family: $headings-font;
+          font-size: 20px;
+          font-weight: 700;
+          margin-bottom: 1rem;
+        }
+
+        .landlord-container{
+          display: flex;
+          gap: 10px;
+          margin-bottom: 1rem;
+
+          input{
+            height: auto;
+          }
+        }
+        #tel{
+          margin-bottom: 2rem;
+        }
+      }
+    }
+
+    .close-modal{
+      position: absolute;
+      right: 2%;
+      top: 2%;
+      cursor: pointer;
+      border-radius: 50%;
+
+      &:hover{
+        background-color: $light-blue;
       }
     }
   }
