--- a/src/components/PropertyList/propertyList.scss
+++ b/src/components/PropertyList/propertyList.scss
@@ -2,8 +2,75 @@
 
 .property-list{
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 0 1rem;
+
+  .pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+
+    ul{
+      display: flex;
+
+      list-style: none;
+      gap: 1rem;
+
+      .pagination-dots{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: end;
+
+        .dots{
+          width: 100%;
+          display: flex;
+          gap: 3px;
+          padding-bottom: 10px;
+
+          .dot{
+            width: 3px;
+            height: 3px;
+            background-color: $text-color;
+            border-radius: 50%;
+          }
+        }
+      }
+
+      li{
+        button{
+          cursor: pointer;
+          font-family: $body-font;
+          background-color: $white-color;
+          display: flex;
+          justify-content: center;
+          align-content: center;
+          align-items: center;
+
+          color: $text-color;
+          border-radius: 50%;
+          height: 50px;
+          width: 50px;
+          border-style: solid;
+          border-color: $text-color;
+          transition: all .2s ease-in-out;
+
+          &:hover{
+            color: $white-color;
+            background-color: $dark-blue;
+          }
+
+        }
+
+
+
+      }
+
+    }
+  }
 
   .list-container{
 
@@ -20,65 +87,7 @@
     width: 100%;
     height: 100%;
 
-    .pagination{
 
-      ul{
-        display: flex;
-        list-style: none;
-        gap: 1rem;
-
-        .pagination-dots{
-          display: flex;
-          justify-content: center;
-          align-content: center;
-          align-items: end;
-
-          .dots{
-            width: 100%;
-            display: flex;
-            gap: 3px;
-            padding-bottom: 10px;
-
-            .dot{
-              width: 3px;
-              height: 3px;
-              background-color: $text-color;
-              border-radius: 50%;
-            }
-          }
-        }
-
-        li{
-          button{
-            cursor: pointer;
-            font-family: $body-font;
-            background-color: $white-color;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            align-items: center;
-
-            color: $text-color;
-            border-radius: 50%;
-            height: 50px;
-            width: 50px;
-            border-style: solid;
-            border-color: $text-color;
-            transition: all .2s ease-in-out;
-
-            &:hover{
-              color: $white-color;
-              background-color: $dark-blue;
-            }
-
-          }
-
-
-
-        }
-
-      }
-    }
 
     @media screen and (max-width: 768px){
       gap: 2rem;
