--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -116,6 +116,8 @@
         .images-slider{
           display: flex;
           gap: 1rem;
+          min-height: 132px;
+          height: 100%;
 
           overflow-x: auto;
           overflow-y: hidden;
@@ -126,7 +128,7 @@
 
           .slide{
             height: 100px;
-            width: 190px;
+            min-width: 190px;
             border-radius: 6px;
             cursor: pointer;
 
@@ -190,6 +192,8 @@
           }
 
           .data{
+
+
             margin: .7rem 0;
             display: flex;
             flex-direction: row;
@@ -212,12 +216,14 @@
             }
           }
 
+
           address{
             font-family: $body-font;
             font-style: normal;
             font-weight: 400;
             line-height: 23px;
             color: $text-color;
+
           }
 
           .property-facts{
@@ -246,11 +252,17 @@
                     display: inline-block;
                     font-size: 12px;
                   }
+                  strong{
+                    height: 21.5px;
+
+                  }
                 }
 
               }
             }
           }
+
+
 
         }
 
@@ -308,4 +320,55 @@
     }
 
   }
+
+
+}
+
+.skeleton-box{
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  z-index: 9999;
+
+  position: relative;
+  overflow: hidden;
+  background-color: #DDDBDD;
+  color: transparent;
+
+  cursor: default !important;
+
+
+  &::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(
+                    90deg,
+                    rgba(#fff, 0) 0,
+                    rgba(#fff, 0.2) 20%,
+                    rgba(#fff, 0.5) 60%,
+                    rgba(#fff, 0)
+    );
+    animation: shimmer 2s infinite;
+    content: '';
+  }
+
+  @keyframes shimmer {
+    100% {
+      transform: translateX(100%);
+    }
+  }
+
+
+  *{
+    opacity: 0!important;
+    color: transparent!important;
+    pointer-events: none!important;
+
+  }
+
+
 }
