--- a/src/components/PropertyList/propertyList.scss
+++ b/src/components/PropertyList/propertyList.scss
@@ -75,7 +75,7 @@
   .list-container{
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 170px));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 170px));
     justify-content: center;
 
     gap: 3rem;
