--- a/src/components/Authentication/authentication.scss
+++ b/src/components/Authentication/authentication.scss
@@ -70,34 +70,36 @@
       display: flex;
       flex-direction: column;
 
-      input{
-        height: 100%;
-        width: 100%;
-        padding: .8rem 1rem;
-        border-radius: 4px;
-        border: 1px solid #DDDDDD;
-        background-color: $light-blue;
+      //input{
+      //  height: 100%;
+      //  width: 100%;
+      //  padding: .8rem 1rem;
+      //  border-radius: 4px;
+      //  border: 1px solid #DDDDDD;
+      //  background-color: $light-blue;
+      //
+      //  font-family: $body-font;
+      //  color: $text-color;
+      //  font-style: normal;
+      //  font-weight: 400;
+      //  font-size: 16px;
+      //  line-height: 27px;
+      //
+      //
+      //  &:focus{
+      //    outline: none;
+      //  }
+      //}
 
-        font-family: $body-font;
-        color: $text-color;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 27px;
 
+      //label{
+      //  font-family: $body-font;
+      //  color: $text-color;
+      //  font-weight: 500;
+      //  line-height: 30px;
+      //  font-size: 14px;
+      //}
 
-        &:focus{
-          outline: none;
-        }
-      }
-
-      label{
-        font-family: $body-font;
-        color: $text-color;
-        font-weight: 500;
-        line-height: 30px;
-        font-size: 14px;
-      }
       #login-email{
         margin-bottom: 1.5rem;
       }
@@ -105,6 +107,7 @@
       #login-password{
         margin-bottom: 2rem;
       }
+
       .submit-form{
         cursor: pointer;
         border-radius: 4px;
